--- a/app/components/my-header/my-header.css
+++ b/app/components/my-header/my-header.css
@@ -1,14 +1,17 @@
-/*my-header {
+my-header {
   display: flex;
   align-content: flex-end;
   width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: lightgray;
 }
 
 my-header a{
   flex:1;
   display: inline-block;
   margin-left: 40px;
-  font-family: sans-serif;
-}*/
+  font-family: 'montserrat', 'sans serif';
+  color: rgb(68, 68, 68);
+  text-decoration: none;
+}
