--- a/app/views/components/components.html
+++ b/app/views/components/components.html
@@ -1,4 +1,14 @@
-<div>This is going to be a sandbox area where we can build componenets before placing them where they will finally be used.</div>
+<div>This is going to be a sandbox area where we can build components before placing them where they will finally be used.</div>
+
+<product ng-repeat="product in products" product="product"></product>
+
+<div>
+    My Cart:
+    <cart><cart>
+</div>
+
+
+
 
 <br/>
 <br/>
